Fixed: left page shadows spilling onto right hand pages in book view
Now, lefthand pages only have a shadow on the bottom.

Also, updated shadow styles to be a little more subtle.

--- a/source/css/viewer.less
+++ b/source/css/viewer.less
@@ -150,13 +150,12 @@
         margin: 0 auto;
 
         .diva-page {
-            .pretty-shadow(6px);
+            .box-shadow(7px 7px 6px -6px rgba(0,0,0,0.3));
             .loading;
             position: absolute;
         }
 
         .diva-document-page {
-            .diva-page;
             left: 0;
             right: 0;
 
@@ -173,6 +172,11 @@
                     cursor: pointer;
                 }
             }
+        }
+
+        /* shadow only on bottom to prevent spilling onto righthand pages */
+        .diva-page-book-left {
+            .box-shadow(0px 7px 6px -6px rgba(0,0,0,0.3));
         }
 
         .diva-page-vertical {
